trunk/Archive2/a7/d74ac0f453057f/output
main.cpp:5:5: error: no matching function for call to 'foo'
    foo(arr);
    ^~~
main.cpp:1:6: note: candidate function not viable: no known conversion from 'int [4]' to 'int (&)[5]' for 1st argument
void foo(int(&)[5]) {}
     ^
1 error generated.
